--- a/templates/Customer/customer_productview.html
+++ b/templates/Customer/customer_productview.html
@@ -1,17 +1,31 @@
 {% extends 'Customer/customer_base.html' %}
+
 {% block content %}
-{% for i in data %}
-<div class="card" style="width: 15rem;background-color: white; color:black ;margin:10px;border-radius:8px;font-family:Garamond">
-  <img src="{{i.image.url}}" style="height:150px ; width:200px;margin-left:20px;margin-top:20px;margin-bottom:0px;"  class="card-img-top" alt="...">
+<form method="get" class="fomr-inline search-form">
+    <div class="d-none d-md-flex ms-4">
+        {{nameFilter.form}}
+        <br>
+        <button class="btn btn-primary mr-2">search</button>
+    </div>
+</form>
+<br>
+<div class="row">
+    {% for i in data %}
+    <div class="col-md-3 mb-3">
+        <div class="card" style="background-color: white; color: black; margin: 2px; border-radius: 8px; font-family: Garamond; height: 450px;">
+            <img src="{{ i.image.url }}" style=" height: 150px; width: 181px; margin: 20px;" class="card-img-top img" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{ i.product_name }}</h5>
+                <h6>Brand: {{ i.brand }}</h6>
+                <h6>Seller: {{ i.user.name }}</h6>
+                <p class="card-text">Price: {{ i.price }}<br><b>Product details:</b><br>{{ i.description }}</p>
+                <a href="{% url 'buyproduct' i.id %}" class="btn btn-primary" style="margin-bottom:8px">Buy</a>
 
-  <div class="card-body" >
-    <h5 class="card-title">{{i.product_name}}</h5>
-    <h6>Brand : {{i.brand}}</h6> <h6>Seller : {{i.user.name}}</h6>
-    <p class="card-text">Price : {{i.price}}<br><b>Product details </b><br>{{i.description}}</p>
+                    <a href="{% url 'cart' i.id %}" class="btn btn-primary" style="margin-bottom:8px">Add to cart</a>
 
-    <a href="#" class="btn btn-primary">buy</a>
-    <a href="#" class="btn btn-primary">add to cart</a>
-  </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
 </div>
-{% endfor %}
 {% endblock %}
