--- a/templates/Seller/product.html
+++ b/templates/Seller/product.html
@@ -5,6 +5,6 @@
       {% csrf_token %}
     {{data1|crispy}}
      {{data2|crispy}}
-    <button type="submit">Add product</button>
+    <button type="submit" style="border-radius:8px;background-color:#cc3412;color:white;border:none">Add product</button>
 </form>
 {% endblock %}
