--- a/templates/home.html
+++ b/templates/home.html
@@ -30,42 +30,47 @@
 	}
 	.ecommerce{
 	margin-left:500px;
+	margin-top:100px;
 
+	}
+	.div1{
+	height:900px;
+	width:100%;
 	}
 </style>
 	<body>
 
 		<!-- Start Header/Navigation -->
-		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark  bg-dark" arial-label="Furni navigation bar">
+<!--		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark  bg-dark" arial-label="Furni navigation bar">-->
 
-			<div class="container">
-<!--				<a class="navbar-brand" href=" {% static 'index.html' %} ">Furni<span>.</span></a>-->
+<!--			<div class="container">-->
+<!--&lt;!&ndash;				<a class="navbar-brand" href=" {% static 'index.html' %} ">Furni<span>.</span></a>&ndash;&gt;-->
 
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
+<!--				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--					<span class="navbar-toggler-icon"></span>-->
+<!--				</button>-->
 
-				<div class="collapse navbar-collapse" id="navbarsFurni">
-					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-						<li class="nav-item active">
+<!--				<div class="collapse navbar-collapse" id="navbarsFurni">-->
+<!--					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">-->
+<!--						<li class="nav-item active">-->
 
-							<a class="nav-link" href=" {% static 'index.html' %} ">Home</a>
-						</li>
-						<li><a class="nav-link" href=" {% static 'shop.html' %} ">Shop</a></li>
-						<li><a class="nav-link" href=" {% static 'about.html' %} ">About us</a></li>
-						<li><a class="nav-link" href=" {% static 'services.html' %} ">Services</a></li>
-						<li><a class="nav-link" href=" {% static 'blog.html' %} ">Blog</a></li>
-						<li><a class="nav-link" href=" {% static 'contact.html' %} ">Contact us</a></li>
-					</ul>
+<!--							<a class="nav-link" href=" {% static 'index.html' %} ">Home</a>-->
+<!--						</li>-->
+<!--						<li><a class="nav-link" href=" {% static 'shop.html' %} ">Shop</a></li>-->
+<!--						<li><a class="nav-link" href=" {% static 'about.html' %} ">About us</a></li>-->
+<!--						<li><a class="nav-link" href=" {% static 'services.html' %} ">Services</a></li>-->
+<!--						<li><a class="nav-link" href=" {% static 'blog.html' %} ">Blog</a></li>-->
+<!--						<li><a class="nav-link" href=" {% static 'contact.html' %} ">Contact us</a></li>-->
+<!--					</ul>-->
 
-					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="#"><img src=" {% static 'images/user.svg' %} " </a></li>
-						<li><a class="nav-link" href=" {% static 'cart.html' %} "><img src=" {% static 'images/cart.svg' %} "></a></li>
-					</ul>
-				</div>
-			</div>
-				
-		</nav>
+<!--					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">-->
+<!--						<li><a class="nav-link" href="#"><img src=" {% static 'images/user.svg' %} " </a></li>-->
+<!--						<li><a class="nav-link" href=" {% static 'cart.html' %} "><img src=" {% static 'images/cart.svg' %} "></a></li>-->
+<!--					</ul>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--				-->
+<!--		</nav>-->
 		<!-- End Header/Navigation -->
 
 		<!-- Start Hero Section -->
@@ -74,7 +79,7 @@
 
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
-							<div class="intro-excerpt ">
+							<div class="intro-excerpt div1 ">
 
 
 								<h1>E-COMMERCE</h1>
@@ -83,7 +88,7 @@
 								<p><a href=" {% url 'seller' %} " class="btn btn-white-outline btn1 me-2">Seller</a><br><a href=" {% url 'customer' %}" class="btn btn-white-outline btn1">Customer</a><br><a href=" {% url 'login_view' %}" class="btn btn-white-outline btn1">login</a></p>
 							</div>
 							<div class="sofa-img">
-					<img src=" {% static 'images.png' %} "style="margin-left:500px" alt="Image" class="img-fluid">
+<!--					<img src=" {% static 'images.png' %} "style="margin-left:500px" alt="Image" class="img-fluid">-->
 				</div>
 						</div>
 						<div class="col-lg-7">
