--- a/templates/Seller/product_view.html
+++ b/templates/Seller/product_view.html
@@ -1,5 +1,13 @@
 {% extends 'Seller/seller_base.html' %}
+
 {% block content %}
+<form method="get" class="fomr-inline search-form">
+    <div class="d-none d-md-flex ms-4">
+        {{brandFilter.form}}
+        <br>
+        <button class="btn btn-primary mr-2">search</button>
+    </div>
+</form>
 <h3>Total products</h3>
 <table class="table">
   <thead>
@@ -24,7 +32,7 @@
       <td><img src="{{i.image.url}}" ></td>
       <td>{{i.description}}</td>
       <td><a href="{% url 'product_delete' i.id %}" class="btn btn-danger">Delete</a></td>
-      <td><a href="{% url 'product_update' i.id %}" class="btn btn-warning">update</a></td>
+      <td><a href="{% url 'product_update' i.id %}"  class="btn btn-warning">Update</a></td>
     </tr>
     {% endfor %}
   </tbody>
